--- a/templates/subjects/chemistry.html
+++ b/templates/subjects/chemistry.html
@@ -1,10 +1,10 @@
 <!-- Extending the predefined project layout -->
 {% extends "layouts/base.html" %}
 
-<!- This variable sets name of browser tab  -->
+<!-- This variable sets name of browser tab  -->
 {% set project = "AP Chemistry" %}
 
-<!- This is a replacement block for Body in base.html -->
+<!-- This is a replacement block for Body in base.html -->
 {% block body %}
 
 
