fixed APEC image

--- a/templates/subjects/notes.html
+++ b/templates/subjects/notes.html
@@ -54,8 +54,8 @@
         }
         img {
             margin-left: 250px;
-            width: 207px;
-            height: 368px;
+            /*width: 207px;*/
+            /*height: 368px;*/
         }
         button {
             margin-left: 250px;
@@ -74,22 +74,15 @@
 
 <style>
 
-    @keyframes camp {
-        from {Opacity:0%}
-        to {Opacity:100%}
-    }
-
     .camp:hover{
-    position:relative;left: 52%;
+        position:relative;left: 52%;
         font-size: 250px;color:#16100F;
         opacity: 100%;
-        animation-name: camp;
     }
 
     .camp{
        opacity: 0%;
     }
-
 
 </style>
 
