--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -36,6 +36,14 @@
                     <a class="dropdown-item" href="{{ url_for('bchase.chase')}}">Chase</a>
                 </div>
             </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    PBL Pages
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{{ url_for('bpranav.dogs') }}">Dogs Adoption</a>
+                </div>
+            </li>
 
         </div>
 
