--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -21,6 +21,6 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
                 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
             </head>
-            <body>
+        </div>
     </div>
 </nav>
