--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -8,7 +8,7 @@
     </script>
     <style>
         body { height: 100vh; }
-        * { cursor: url(/static/pawscursor.png) 0 0, default; }
+        * { cursor: url(/static/assets/pawscursor.png) 0 0, default; }
     </style>
     <link rel="shortcut icon" href="/static/assets/pawscursor.png">
 
@@ -54,7 +54,7 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Databases
+                    Database Features
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="nav-link" href={{ url_for('crud.search') }}>SQL Search</a>
