Birds HTML Page

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -42,6 +42,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('bpranav.dogs') }}">Dogs Adoption</a>
+                    <a class="dropdown-item" href="{{ url_for('bpranav.birds') }}">Birds Adoption</a>
                 </div>
             </li>
 
