weather search with api

--- a/templates/brian.html
+++ b/templates/brian.html
@@ -29,7 +29,7 @@
         </style>
         </p>
     <div>
-        <img id="MaskOn" src="../static/IMG_19F786F8D399-1.jpeg" style="max-height: 500px;" class="center">
+        <img id="MaskOn" src="../static/brian_maskon.jpeg/" style="max-height: 500px;" class="center">
         <style>
             .center {
                 display: block;
@@ -39,15 +39,15 @@
         </style>
     </div>
     <h1><center>Check out some tennis news!</center></h1>
-    {% for games in res %}
+<!--    {% for games in res %}-->
 
-        <li class="organization">The {{games.name}} tournament was played in the city of
-            {{games.city}} in the country of {{games.country}}.
-            The {{games.name}} started on {{games.start_date}} and ended on
-            {{games.end_date}} and was a part of the {{games.season}} season.
-            This tournament was a part of the {{games.code}} tour and was played on
-            {{games.surface}} surface.</li>
-        {% endfor %}
+<!--        <li class="organization">The {{games.name}} tournament was played in the city of-->
+<!--            {{games.city}} in the country of {{games.country}}.-->
+<!--            The {{games.name}} started on {{games.start_date}} and ended on-->
+<!--            {{games.end_date}} and was a part of the {{games.season}} season.-->
+<!--            This tournament was a part of the {{games.code}} tour and was played on-->
+<!--            {{games.surface}} surface.</li>-->
+<!--        {% endfor %}-->
     </ul>
     <h1><center>Journal</center></h1>
     <iframe class="center"
