--- a/templates/weather.html
+++ b/templates/weather.html
@@ -3,5 +3,20 @@
 {% set project = "Weather is so Cool" %}
 
 {% block body %}
+<form action='/weather/' method="POST">
+    <input type="text" placeholder="Enter keyword term" name='keyword'>
+    <button type="submit">Get Weather</button>
 
+
+</form>
+
+{% if results %}
+<p>
+    Currently in {{results.location.city}}, the wind speed is {{results.current_observation.wind.speed}}.
+    The humidity is {{results.current_observation.atmosphere.humidity}}, the visibility is
+    {{results.current_observation.atmosphere.visibility}}, and the pressure is
+    {{results.current_observation.atmosphere.pressure}}. Sunrise today is at
+    {{results.current_observation.astronomy.sunrise}} and sunset is at {{results.current_observation.astronomy.sunset}}.
+</p>
+{% endif %}
 {% endblock %}
