added bootstrap stuff and new templates (study.html, stress.html, volunteer.html)

--- a/templates/volunteer.html
+++ b/templates/volunteer.html
@@ -5,7 +5,28 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+{%  block body %}
 <body>
+<div class="container-fluid">
+    <h1 style="text-align: center">Volunteer!</h1>
+    <div class="row">
+        <div class="col-sm-12">
+            <p style="font-size: x-large">
+                Here are some places to volunteer!
+                <br>
+                <a href="https://www.volunteermatch.org/">
+                    <img src="/static/assets/volunteer_match.png" width="800px">
+                </a>
+                <br>
+                <a href="https://www.sandiegocounty.gov/content/sdc/volunteer.html">
+                    <img src="/static/assets/sdcgovt_volunteer_program.png" width="800px">
+                </a>
+            </p>
+        </div>
 
+    </div>
+</div>
+</div>
 </body>
+{% endblock %}
 </html>
