--- a/templates/home.html
+++ b/templates/home.html
@@ -42,12 +42,14 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1>Links</h1>
+            <h1>Other Sites & Info</h1>
             <p>There are many other sites full of info about stress relief, relaxation, and other resources. We've organized them into neat little categories for you:</p>
         </div>
+        <div style="font-size: xx-large; text-align: center">
         <p> <a href="/stress">Stress Relief</a> </p>
         <p> <a href="/study">Study Hall</a> </p>
         <p> <a href="/volunteer">Volunteer!</a> </p>
+        </div>
     </div>
 
     </body>
