--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -2,7 +2,7 @@
 This HTML is setup as a fragment allowing it to be "included" by other HTML files via Jinja2
 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="http://127.0.0.1:5000/">Student Resources</a>
+        <a class="navbar-brand" href="/">Student Resources</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -14,6 +14,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('khushi') }}>Khushi</a>
             <a class="nav-link" href={{ url_for('shreya') }}>Shreya</a>
             <a class="nav-link" href={{ url_for('linda') }}>Punnu</a>
+            <a class="nav-link" href={{ url_for('dark') }}>Dark Mode Switch Test</a>
             <html>
             <head>
                 <meta name="viewport" content="width=device-width, initial-scale=1">
