format weather api

--- a/crud/templates/crud/crud.html
+++ b/crud/templates/crud/crud.html
@@ -55,20 +55,20 @@
     <div class="container py-4 text-light bg-success">
         <header class="pb-3 mb-4 border-bottom">
             <div class="d-flex align-items-center text-light text-decoration-none">
-                <span class="fs-4">SQL CRUD Admin Page</span>
+                <span class="fs-4">CRUD Page</span>
             </div>
         </header>
 
         <div class="container py-4">
             <div class="p-5 mb-4 bg-light text-dark rounded-3">
-                <h2>Table Viewer</h2>
+                <h2>Users List</h2>
                 <div class="row align-items-md-stretch">
                     <table class="table">
                         <tbody>
                         <tr>
                             <td></td>
                             <td></td>
-                            <td><a href={{url_for('crud.crud')}}>Full Table </a></td>
+                            <td><a href={{url_for('crud.crud')}}>View Full Table </a></td>
                             <td><a href="https://github.com/RohanG326/supporting_cast/tree/main/crud">GitHub Source</a></td>
                         </tr>
                         </tbody>
