--- a/crud/templates/crud/search.html
+++ b/crud/templates/crud/search.html
@@ -5,7 +5,7 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
 {% extends "layouts/base.html" %}
 
 {% block head %}
-<title>SQL search</title>
+eeeeeeeeeeeeeeeeeeeeeeeeeeee<title>Search</title>
 {% endblock %}
 
 {% block body %}
@@ -39,13 +39,11 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
 
     <script>
         function search_data() {
-            // fetch standard requires data set to a name-value pair
             const term = document.getElementById("term");
             const body = {
                 term: term.value
             };
 
-            // fetch call with header options
             fetch('/crud/search/term/', {
                 method: "POST",
                 credentials: "include",
@@ -55,15 +53,11 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
                     "content-type": "application/json"
                 })
             })
-            // async then replies with response header
             .then(function (response) {
-                // prepare HTML search result container for new output
                 const resultContainer = document.getElementById("result");
-                // clean up from previous search
                 while (resultContainer.firstChild) {
                     resultContainer.removeChild(resultContainer.firstChild);
                 }
-                // trap error response from Web API
                 if (response.status !== 200) {
                     const errorMsg = 'Database response error: ' + response.status;
                     console.log(errorMsg);
@@ -72,9 +66,7 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
                     resultContainer.appendChild(div);
                     return;
                 }
-                // response contains valid result
                 response.json().then(function(data) {
-                    // loop through JSON and build HTML output
                     for (let i = 0; i < data.length; i++) {
                         const div = document.createElement("div");
                         div.innerHTML = data[i].name + ' ' + data[i].email;
