--- a/templates/weather.html
+++ b/templates/weather.html
@@ -9,6 +9,54 @@
 
 
 </form>
+    <style>
+        table, td, th {
+            border: 10px solid white;
+            padding: 50px;
+        }
+        td, th {
+            text-align:center;
+            color: white;
+            font-size: 20px;
+        }
+        table{
+            width: 75%;
+            margin: auto;
+        }
+
+    </style>
+
+
+    <div class="-block" style="margin: 2% 25% 5%; font-family: gilroy,serif;">
+        <div class="col-12" style="text-align: center;">
+            <h1 style="color: midnightblue">City Weather Data</h1>
+        </div>
+
+        <div class="col-12 mainbox center-block">
+            <table style="margin: 2%">
+                <tr>
+                    <th>City</th>
+                    <th>Wind Speed</th>
+                    <th>Humidity</th>
+                    <th>Visibility</th>
+                    <th>Air Pressure</th>
+                    <th>Sunrise</th>
+                    <th>Sunset</th>
+                </tr>
+                    <tr>
+                        <td>{{results.location.city}}</td>
+                        <td>{{results.current_observation.wind.speed}}</td>
+                        <td>{{results.current_observation.atmosphere.humidity}}</td>
+                        <td>{{results.current_observation.atmosphere.visibility}}</td>
+                        <td>{{results.current_observation.atmosphere.pressure}}</td>
+                        <td>{{results.current_observation.astronomy.sunrise}}</td>
+                        <td>{{results.current_observation.astronomy.sunset}}</td>
+                    </tr>
+            </table>
+
+        </div>
+
+    </div>
 
 {% if results %}
 <p>
