--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -22,7 +22,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             </li>
                 <a class="nav-link" href="/mainabout">Activities<span class="sr-only">(current)</span></a>
             </li>
-                <a class="nav-link" href="/mainabout">Mini Labs<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/weather">Weather<span class="sr-only">(current)</span></a>
             </li>
                 <a class="nav-link" href="/feedback">Give Us Feedback!<span class="sr-only">(current)</span></a>
                 </div>
