--- a/templates/pokemon_cards.html
+++ b/templates/pokemon_cards.html
@@ -11,17 +11,18 @@
 <style>
     .table {
         margin: auto;
-        border: 1px solid black;
+        border: 1px solid white;
         width: 50%;
         padding-left: 75px;
+        color: white;
     }
 
     .th {
-        border: 1px solid black;
+        border: 1px solid white;
     }
 
     .td {
-        border: 1px solid black;
+        border: 1px solid white;
     }
 
 
