--- a/templates/layouts/feedback.html
+++ b/templates/layouts/feedback.html
@@ -73,7 +73,7 @@
                     </form>
 
                     <!--<ul>-->     <p hidden id="top"></p> <!--this contains only the most recent text added so when text is added this is not hidden anymore and is displayed above the "previous text" box-->
-                    <p hidden id="previous" style="color:white"><br><mark>Previous Responses</mark><br></p><!--this becomes unhidden when text is added-->
+                    <p hidden id="previous" color:white"><br><mark>Previous Responses</mark><br></p><!--this becomes unhidden when text is added-->
                     <!--<li>-->     <p id="change" style="color:white";>{% if input | length != 0 %} {{ name }} : {{ input }} {% else %}<br><mark>Previous Responses</mark><br>{% endif %}</p><!--</li>--><!--this contains only the local storage without the new text-->
                     <!--</ul>-->
 
