fixed APEC image

--- a/templates/final_grade_calc.html
+++ b/templates/final_grade_calc.html
@@ -6,9 +6,11 @@
   <title>Title</title>
 </head>
 {% block body %}
-<div id="page-container" class="green-theme">
-<div class="theme-toggle">
-    <button onclick="theme()">Change Theme</button>
+
+<!--<div id="page-container" class="green-theme">-->
+<!--<div class="theme-toggle">-->
+<!--    <button onclick="theme()">Change Theme</button>-->
+
 </div>
 <h1 style="text-align: center; text-transform: uppercase">Final Grade Calculator</h1>
 <div class="grade-container">
