--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -50,6 +50,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             --cardbg: #64483f;
             --backcardbg: #FED2B9;
             --cardtxt: #FED2B9;
+            --jump: #000000;
 
 
         }
@@ -70,6 +71,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             --cardbg: #463530;
             --backcardbg:#463530;
             --cardtxt:#6a6260;
+            --jump:#FFFFFF;
         }
 
         html, body{
