--- a/templates/subjects/notes.html
+++ b/templates/subjects/notes.html
@@ -76,7 +76,8 @@
 
     .camp:hover{
         position:relative;left: 52%;
-        font-size: 250px;color:#16100F;
+        font-size: 250px;
+        color: var(--jump);
         opacity: 100%;
     }
 
