--- a/templates/subjects/notes.html
+++ b/templates/subjects/notes.html
@@ -77,11 +77,11 @@
     .camp:hover{
         position:relative;left: 52%;
         font-size: 250px;color:#16100F;
-        opacity: 100%;
+/*         opacity: 100%; */
     }
 
     .camp{
-       opacity: 0%;
+        display: none
     }
 
 </style>
