--- a/templates/about_us/sanjay.html
+++ b/templates/about_us/sanjay.html
@@ -10,7 +10,7 @@
 <h1 style="text-align:center;text-transform: uppercase">
 Sanjay Bharadwaj
 </h1>
-<section class=" container">
+<section class="smb-container">
 <div class="description">
     <figure class="img">
         <img src="/static/assets/sanjaypic1.jpg" alt="nomask" id="nomask"  >
@@ -35,7 +35,7 @@ Sanjay Bharadwaj
     </div>
 </div>
 </section>
-<section class="container">
+<section class="smb-container">
 <h3 style="text-align: center;"> API Excercise </h3>
 <div class="joke" >
     <div class="col">
@@ -138,7 +138,7 @@ Sanjay Bharadwaj
             border: 2px solid var(--main-color)
         }
 
-        .container {
+        .smb-container {
             margin: 0 auto;
         }
         .description {
