--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -56,6 +56,13 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
     .search-icon {
         max-width: 30px;
     }
+    #search-hover {
+        fill: #000
+    }
+    #search-hover:hover {
+        fill: var(--main-color);
+        border: 2px solid var(--main-color)
+    }
     .form-control {
         border: none;
         outline: none;
@@ -139,7 +146,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
         }
     </style>
 <!--     <button onclick="showSearch()">Search</button> -->
-    <div><img class="search-icon" src="/static/assets/search.svg" onclick="showSearch()" alt=""></div>
+    <div onclick="showSearch()"><svg id="search-hover" class="search-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16" height="16" viewBox="0 0 16 16"><path  d="M15.504 13.616l-3.79-3.223c-0.392-0.353-0.811-0.514-1.149-0.499 0.895-1.048 1.435-2.407 1.435-3.893 0-3.314-2.686-6-6-6s-6 2.686-6 6 2.686 6 6 6c1.486 0 2.845-0.54 3.893-1.435-0.016 0.338 0.146 0.757 0.499 1.149l3.223 3.79c0.552 0.613 1.453 0.665 2.003 0.115s0.498-1.452-0.115-2.003zM6 10c-2.209 0-4-1.791-4-4s1.791-4 4-4 4 1.791 4 4-1.791 4-4 4z"></path></svg></div>
     <div id="form-group" class="form-group" style="display: none">
         <div style="display: flex;" class="search">
             <input type="text" class="form-control" id="term" placeholder="enter search term">
