fixed imgs not displaying properly (perma width rather than 50)

--- a/templates/study.html
+++ b/templates/study.html
@@ -16,11 +16,11 @@
                 Here are some websites:
                 <br>
                 <a href="https://www.khanacademy.org/">
-                    <img src="/static/assets/khan%20academy.png" width="800px">
+                    <img src="/static/assets/khan%20academy.png" width="50%">
                 </a>
                 <br>
                 <a href="https://studyhall.org/">
-                    <img src="/static/assets/study%20hall.png" width="800px">
+                    <img src="/static/assets/study%20hall.png" width=50%">
                 </a>
             </p>
         </div>
@@ -29,7 +29,7 @@
                 Here are some study techniques:
                 <br>
                 <a href="https://www.usa.edu/blog/study-techniques/">
-                    <img src="/static/assets/10-effective-study-methods.jpg" width="800px">
+                    <img src="/static/assets/10-effective-study-methods.jpg" width="50%">
                 </a>
             </p>
         </div>
