--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -51,6 +51,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             --backcardbg: #FED2B9;
             --cardtxt: #FED2B9;
             --jump: #000000;
+            --calcbg: #876459;
+            --calcbx: #fed2b9;
+            --calctxt: black;
 
 
         }
@@ -72,6 +75,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             --backcardbg:#463530;
             --cardtxt:#6a6260;
             --jump:#FFFFFF;
+            --calcbg:#3b2d29;
+            --calcbx:#55423C;
+            --calctxt: #fed2b9;
         }
 
         html, body{
