format weather api

--- a/crud/templates/crud/search.html
+++ b/crud/templates/crud/search.html
@@ -5,7 +5,7 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
 {% extends "layouts/base.html" %}
 
 {% block head %}
-eeeeeeeeeeeeeeeeeeeeeeeeeeee<title>Search</title>
+<title>Search</title>
 {% endblock %}
 
 {% block body %}
