--- a/templates/weather.html
+++ b/templates/weather.html
@@ -11,12 +11,12 @@
     <body style="background-color:lightpink; height: 1000px">
 <style>
     table, td, th {
-        border: 10px solid white;
+        border: 4px solid midnightblue;
         padding: 50px;
     }
     td, th {
         text-align:center;
-        color: white;
+        color: midnightblue;
         font-size: 20px;
     }
     table{
