--- a/templates/home.html
+++ b/templates/home.html
@@ -42,8 +42,8 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1>Other Sites & Info</h1>
-            <p>There are many other sites full of info about stress relief, relaxation, and other resources. We've organized them into neat little categories for you:</p>
+            <h1>Other Sites & Info </h1>
+            <p>There are many other sites full of info about stress relief, relaxation, and other resources. We've organized them into neat categories for you! </p>
         </div>
         <div style="font-size: xx-large; text-align: center">
         <p> <a href="/stress">Stress Relief</a> </p>
