changed website colors

--- a/templates/aboutdaniel.html
+++ b/templates/aboutdaniel.html
@@ -8,7 +8,7 @@
     {% block background %}
         <style>
             html, body{
-                background-color: lightgreen;
+                background-color: #2076a9;
             }
         </style>
     {% endblock %}
