--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -28,7 +28,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             -moz-animation: fadein 2s; /* Firefox */
             -webkit-animation: fadein 2s; /* Safari and Chrome */
             -o-animation: fadein 2s; /* Opera */
-            background-color: #2076a9;
+            background-color: #1d6fa1;
             color: var(--white);
         }
 
