stress relief page

--- a/templates/stress.html
+++ b/templates/stress.html
@@ -3,10 +3,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Stress Relief</title>
 </head>
 {%  block body %}
 <body>
+<div class="container-fluid">
+    <h1 style="text-align: center">Relaxation</h1>
+    <div class="row">
+        <div class="col-sm-6">
+            <p style="font-size: x-large">
+                Here is the relaxing video:
+                <br>
+                <a href="https://www.youtube.com/watch?v=4ROrW727q_s">
+                    <img src="/static/assets/Bluelantern.jpg" width="50%">
+                </a>
+                <br>
+            </p>
+        </div>
+        <div class="col-sm-6" ">
+        <p>
+            Here is the coloring book:
+            <br>
+            <a href="https://coloringbook.pics/">
+                <img src="/static/assets/colorpage.jpg" width=70%">
+            </a>
+
+        </p>
+    </div>
+</div>
+</div>
 
 </body>
 {% endblock %}
