--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -32,6 +32,8 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('shreya') }}>Shreya</a>
             <a class="nav-link" href={{ url_for('linda') }}>Punnu</a>
             <a class="nav-link" href={{ url_for('dark') }}>Dark Mode Switch Test</a>
+            <a class="nav-link" href={{ url_for('search') }}>Search</a>
+
             <html>
             <head>
                 <meta name="viewport" content="width=device-width, initial-scale=1">
